--- a/resources/views/partials/components/editor.antlers.html
+++ b/resources/views/partials/components/editor.antlers.html
@@ -1,5 +1,7 @@
 {{ if type == 'button' }}
   {{ partial:components/buttons/primary type="outline" }}
+{{ elseif type == 'contact_box' }}
+  {{ partial:components/misc/contact-box class="max-w-sm" }}
 {{ else }}
   {{ text }}
 {{ /if }}
