--- a/resources/views/partials/components/misc/news.antlers.html
+++ b/resources/views/partials/components/misc/news.antlers.html
@@ -9,22 +9,7 @@
         preset="focal-16-10" }}
 
       {{ if has_contact_info }}
-        <div class="bg-vanilla p-10 lg:p-20 my-20 lg:mb-0 lg:mt-30">
-          <h3 class="mb-10">Ansprechpartner:in</h3>
-          {{ if name }}
-            <h4 class="font-bold mb-2">{{ name }}</h4>
-          {{ /if }}
-          {{ if phone || email }}
-          <div class="flex flex-col space-y-2">
-            {{ if phone }}
-              <div>Telefon: <a href="tel:{{ phone }}">{{ phone }}</a></div>
-            {{ /if }}
-            {{ if email }}
-              <div>E-Mail: <a href="mailto:{{ email }}">{{ email }}</a></div>
-            {{ /if }}
-          {{ /if }}
-          </div> 
-        </div>
+        {{ partial:components/misc/contact-box }} 
       {{ /if }}
 
       </div>
