--- a/resources/views/partials/components/accordion/group.antlers.html
+++ b/resources/views/partials/components/accordion/group.antlers.html
@@ -23,7 +23,7 @@
 
             <div class="mb-20 sm:mb-0 sm:col-span-6">
               {{ text_left }}
-                {{ partial:components/editor }}
+                {{ partial:components/editor/single }}
               {{ /text_left }}
             </div>
 
@@ -33,7 +33,7 @@
 
             <div class="mb-20 sm:mb-0 sm:col-span-6">
               {{ text_right }}
-                {{ partial:components/editor }}
+                {{ partial:components/editor/single }}
               {{ /text_right }}
             </div>
 
