--- a/resources/views/partials/components/misc/image_text.antlers.html
+++ b/resources/views/partials/components/misc/image_text.antlers.html
@@ -1,15 +1,15 @@
 {{ partial:layout/inner }}
   <h2>{{ title }}</h2>
   <article class="sm:grid sm:grid-cols-12 sm:gap-20 lg:gap-30">
-    <div class="mb-20 sm:mb-0 sm:col-span-6 lg:col-span-5">
+    <div class="mb-20 sm:mb-0 sm:col-span-6 lg:col-span-5 {{ sequence == 'default' ? 'order-1' : 'order-2' }}">
     {{ partial:components/media/image 
       :image="image" 
       class="w-full h-auto object-cover"
       preset="focal-16-10" }}
     </div>
-    <div class="sm:col-span-6 lg:col-span-7">
+    <div class="sm:col-span-6 lg:col-span-7 {{ sequence == 'default' ? 'order-2' : 'order-1' }}">
       {{ editor }}
-        {{ partial:components/editor }}
+        {{ partial:components/editor/single }}
       {{ /editor }}
     </div>
   </article>
