--- a/resources/views/partials/components/misc/intro.antlers.html
+++ b/resources/views/partials/components/misc/intro.antlers.html
@@ -17,7 +17,7 @@
     <div class="md:w-[40%] mt-40 md:mt-0 px-20 md:pr-40 lg:pr-60 xl:pr-20">
       <div class="max-w-[440px]">
         {{ editor }}
-          {{ partial:components/editor }}
+          {{ partial:components/editor/single }}
         {{ /editor }}
       </div>
     </div>
