--- a/resources/views/partials/components/misc/news.antlers.html
+++ b/resources/views/partials/components/misc/news.antlers.html
@@ -16,7 +16,7 @@
       <div class="sm:col-span-6 lg:col-span-7">
         <h3 class="mb-5 max-w-[440px] text-balance">{{ title }}</h3>
         {{ editor }}
-          {{ partial:components/editor }}
+          {{ partial:components/editor/single }}
         {{ /editor }}
       </div>
     </article>
