--- a/resources/views/partials/components/teaser/text.antlers.html
+++ b/resources/views/partials/components/teaser/text.antlers.html
@@ -1,6 +1,6 @@
 <article class="sm:col-span-6 {{ class }}">
   <h2>{{ title }}</h2>
   {{ editor }}
-    {{ partial:components/editor }}
+    {{ partial:components/editor/single }}
   {{ /editor }}
 </article>
