--- a/resources/views/partials/layout/head.antlers.html
+++ b/resources/views/partials/layout/head.antlers.html
@@ -28,6 +28,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="theme-color" content="#ffffff">
 {{ vite src="resources/css/app.css" }}
+{{ vite src="resources/css/map.css" }}
 {{ livewire:styles }}
 </head>
 {{# {{ partial:layout/debug }} #}}
