--- a/resources/views/partials/elements.antlers.html
+++ b/resources/views/partials/elements.antlers.html
@@ -63,3 +63,8 @@
 {{ if type == 'contact_form' }}
   {{ partial:forms/contact_forms }}
 {{ /if }}
+
+{{ if type == 'map' }}
+  {{ partial:components/misc/map }}
+{{ /if }}
+
