--- a/resources/views/partials/components/misc/map.antlers.html
+++ b/resources/views/partials/components/misc/map.antlers.html
@@ -1,3 +1,5 @@
+{{ vite src="resources/css/map.css" }}
+{{ vite src="resources/js/map.js" }}
 <div id="map" class="w-full min-h-[300px] md:min-h-[600px]" data-zoom="12" data-locations='[
 {{ location }}
   {
