--- a/resources/views/partials/components/misc/map.antlers.html
+++ b/resources/views/partials/components/misc/map.antlers.html
@@ -6,7 +6,8 @@
     "coordinates": [{{ longitude }}, {{ latitude }}],
     "title": "{{ name }}",
     "description": "{{ description }}",
-    "markerClass": "{{ name | slugify }}"
+    "markerClass": "{{ section }}",
+    "section": "{{ section }}"
   }{{ unless last }},{{ /unless }}
 {{ /location }}
 ]'></div>
