--- a/resources/views/partials/layout/main.antlers.html
+++ b/resources/views/partials/layout/main.antlers.html
@@ -1,4 +1,4 @@
-<main role="main" class="relative w-full flex-grow pb-40">
+<main role="main" class="relative w-full flex-grow pb-40 {{ !header_image ? 'pt-30' : ''}}">
   {{ template_content }}
 </main>
 
