--- a/resources/views/events/index.antlers.html
+++ b/resources/views/events/index.antlers.html
@@ -15,21 +15,26 @@
 {{ /page_elements }}
 
 {{ partial:layout/inner }}
-  <h2>Kommende Aktivitäten</h2>
   {{ collection from="events" as="events" sort="event_date:desc" event_date:is_after="now" }}
-    <div class="sm:grid sm:grid-cols-12 sm:gap-x-20 sm:gap-y-30 lg:gap-y-60">
-      {{ events }} 
-        {{ partial:events/teaser }}
-      {{ /events }}
-    </div>
+    {{ if events }}
+      <h2>Kommende Aktivitäten</h2>
+      <div class="sm:grid sm:grid-cols-12 sm:gap-x-20 sm:gap-y-30 lg:gap-y-60">
+        {{ events }} 
+          {{ partial:events/teaser }}
+        {{ /events }}
+      </div>
+    {{ /if }}
   {{ /collection }}
 
-  <h2 class="mt-60 lg:mt-90">vergangene Aktivitäten</h2>
   {{ collection from="events" as="events" sort="event_date:desc" event_date:is_before="now" }}
-    <div class="sm:grid sm:grid-cols-12 sm:gap-x-20 sm:gap-y-30 lg:gap-y-60">
-      {{ events }} 
-        {{ partial:events/teaser }}
-      {{ /events }}
-    </div>
+    {{ if events }}
+      <h2 class="mt-60 lg:mt-90">vergangene Aktivitäten</h2>
+      <div class="sm:grid sm:grid-cols-12 sm:gap-x-20 sm:gap-y-30 lg:gap-y-60">
+        {{ events }} 
+          {{ partial:events/teaser }}
+        {{ /events }}
+      </div>
+    {{ /if }}
   {{ /collection }}
+
 {{ /partial:layout/inner }}
