--- a/resources/views/partials/components/misc/contact-box.antlers.html
+++ b/resources/views/partials/components/misc/contact-box.antlers.html
@@ -6,10 +6,10 @@
   {{ if phone || email }}
   <div class="flex flex-col space-y-2">
     {{ if phone }}
-      <div>Telefon: <a href="tel:{{ phone }}">{{ phone }}</a></div>
+      <div><a href="tel:{{ phone }}">{{ phone }}</a></div>
     {{ /if }}
     {{ if email }}
-      <div>E-Mail: <a href="mailto:{{ email }}">{{ email }}</a></div>
+      <div><a href="mailto:{{ email }}">{{ email }}</a></div>
     {{ /if }}
   {{ /if }}
   </div> 
