--- a/resources/views/partials/components/misc/benefits.antlers.html
+++ b/resources/views/partials/components/misc/benefits.antlers.html
@@ -1,5 +1,7 @@
-<section class="bg-lemon py-30 lg:py-50">
-  <div class="px-25 xl:px-40 max-w-6xl mx-auto grid grid-cols-12 lg:grid-cols-10 gap-20">
+<section class="bg-lemon">
+{{ partial:layout/inner class="!my-0 py-30 lg:py-50" }}
+  <h2>{{ title}}</h2>
+  <div class="grid grid-cols-12 lg:grid-cols-10 gap-20">
     {{ benefit }}
       <div class="col-span-6 md:col-span-4 lg:col-span-2">
         <figure class="mb-10 relative group aspect-square">
@@ -11,5 +13,6 @@
         <h3 class="text-center">{{ title }}</h3>
       </div>
     {{ /benefit }}
-  </div>
+    </div>
+  {{ /partial:layout/inner }}
 </section>
