--- a/resources/views/partials/menu/desktop/wrapper.antlers.html
+++ b/resources/views/partials/menu/desktop/wrapper.antlers.html
@@ -1,6 +1,6 @@
 <nav class="text-xs text-steel flex uppercase relative">
   <div class="mt-80 w-[calc(50%_-_100px)]">
-    <ul class="flex justify-start gap-x-30">
+    <ul class="flex justify-start gap-x-30 pr-15">
       {{ nav:main }}
         {{ if index < 3 }}
           {{ partial:menu/desktop/item }}
