--- a/resources/views/events/show.antlers.html
+++ b/resources/views/events/show.antlers.html
@@ -1,4 +1,4 @@
-{{ partial:layout/inner }}
+{{ partial:layout/inner has_reveal="true" }}
   <h1 class="text-lemon text-3xl lg:text-4xl !mb-0">{{ title }}</h1>
   {{ if event_date }}
     <div class="text-xl lg:text-2xl font-bold mt-3">
