--- a/resources/views/partials/components/media/gallery.antlers.html
+++ b/resources/views/partials/components/media/gallery.antlers.html
@@ -1,4 +1,4 @@
-{{ partial:layout/inner }}
+{{ partial:layout/inner has_reveal="true" }}
   {{ if title}}
   <h2>{{ title }}</h2>
   {{ /if }}
@@ -16,7 +16,7 @@
             class="w-full h-auto object-cover"
             preset="focal-square" }}
         </a>
-      {{ /images}}
+      {{ /images }}
     </section>
   {{ /if }}
 {{ /partial:layout/inner }}
