--- a/resources/views/partials/components/misc/downloads.antlers.html
+++ b/resources/views/partials/components/misc/downloads.antlers.html
@@ -1,4 +1,4 @@
-{{ partial:layout/inner }}
+{{ partial:layout/inner has_reveal="true" }}
   <section class="sm:grid sm:grid-cols-12 sm:gap-x-20 sm:gap-y-30 lg:gap-y-40">
     {{ download_group }}
       <article class="mb-30 sm:mb-0 sm:col-span-6 md:col-span-4">
