--- a/resources/views/partials/components/misc/image_text.antlers.html
+++ b/resources/views/partials/components/misc/image_text.antlers.html
@@ -1,4 +1,4 @@
-{{ partial:layout/inner }}
+{{ partial:layout/inner has_reveal="true"}}
   <h2>{{ title }}</h2>
   <article class="sm:grid sm:grid-cols-12 sm:gap-20 lg:gap-30">
     <div class="mb-20 sm:mb-0 sm:col-span-6 lg:col-span-5 {{ sequence == 'default' ? 'order-1' : 'order-2' }}">
