--- a/resources/views/partials/components/misc/intro.antlers.html
+++ b/resources/views/partials/components/misc/intro.antlers.html
@@ -1,5 +1,7 @@
 
-<div class="md:flex w-full {{ header_image ? 'mt-50 lg:mt-80' : 'mt-80 lg:mt-120' }} mb-60 lg:mb-80 intro">
+<div 
+  class="md:flex w-full {{ header_image ? 'mt-50 lg:mt-80' : 'mt-80 lg:mt-120' }} mb-60 lg:mb-80 intro"
+  data-reveal="fade-in">
   <div class="md:w-[60%] overflow-hidden">
     {{ title }}
       <div class="flex items-center w-full leading-none">
