--- a/resources/views/partials/components/misc/jobs.antlers.html
+++ b/resources/views/partials/components/misc/jobs.antlers.html
@@ -1,4 +1,4 @@
-{{ partial:layout/inner }}
+{{ partial:layout/inner has_reveal="true" }}
   <a name="offene-stellen" class="scroll-mt-125"></a>
   <h2>{{ "Offene Stellen" | trans }}</h2>
 
