--- a/resources/views/partials/components/misc/news.antlers.html
+++ b/resources/views/partials/components/misc/news.antlers.html
@@ -1,4 +1,4 @@
-{{ partial:layout/inner }}
+{{ partial:layout/inner has_reveal="true"}}
   <h2>{{ title }}</h2>
   {{ news }}
     <article class="mb-20 sm:mb-40 sm:grid sm:grid-cols-12 sm:gap-20 lg:gap-30">
