--- a/resources/views/partials/components/misc/services.antlers.html
+++ b/resources/views/partials/components/misc/services.antlers.html
@@ -1,5 +1,5 @@
 <div class="bg-lemon">
-  {{ partial:layout/inner class="!my-0 py-30 lg:py-50" }}
+  {{ partial:layout/inner class="!my-0 py-30 lg:py-50" has_reveal="true" }}
     <h2>Angebote</h2>
     <section class="grid grid-cols-12 gap-20 lg:gap-30">
       {{ service }}
