--- a/resources/views/partials/components/teaser/image_text.antlers.html
+++ b/resources/views/partials/components/teaser/image_text.antlers.html
@@ -1,4 +1,4 @@
-{{ partial:layout/inner }}
+{{ partial:layout/inner has_reveal="true"}}
   <section>
     {{ if sequence == 'default' }}
       <div class="flex flex-col md:flex-row md:gap-x-20 lg:gap-x-30">
