--- a/resources/views/partials/elements.antlers.html
+++ b/resources/views/partials/elements.antlers.html
@@ -1,5 +1,5 @@
 {{ if type == 'editor' }}
-  {{ partial:layout/inner }}
+  {{ partial:layout/inner has_reveal="true" }}
     {{ if !has_columns }}
       <div class="max-w-2xl">
       {{ editor }}
