--- a/resources/views/partials/forms/contact_forms.antlers.html
+++ b/resources/views/partials/forms/contact_forms.antlers.html
@@ -1,4 +1,4 @@
-{{ partial:layout/inner }}
+{{ partial:layout/inner has_reveal="true" }}
   <section id="app-forms" class="lg:w-1/2">
     <form-selector></form-selector>
   </section>
