--- a/resources/views/partials/layout/footer.antlers.html
+++ b/resources/views/partials/layout/footer.antlers.html
@@ -1,4 +1,4 @@
-<footer>
+<footer data-reveal="fade-in">
   {{ partial:layout/inner class="!my-0 py-25 md:py-40 w-full md:grid md:grid-cols-12 md:gap-x-0 lg:items-end" }}
 
     <div class="md:col-span-8 lg:flex lg:items-end">
