--- a/resources/views/events/index.antlers.html
+++ b/resources/views/events/index.antlers.html
@@ -14,7 +14,7 @@
   {{ partial:elements }}
 {{ /page_elements }}
 
-{{ partial:layout/inner }}
+{{ partial:layout/inner has_reveal="true" }}
   {{ collection from="events" as="events" sort="event_date:desc" event_date:is_after="now" }}
     {{ if events }}
       <h2>Kommende Aktivitäten</h2>
