--- a/resources/views/partials/components/misc/benefits.antlers.html
+++ b/resources/views/partials/components/misc/benefits.antlers.html
@@ -1,5 +1,5 @@
 <section class="bg-lemon">
-{{ partial:layout/inner class="!my-0 py-30 lg:py-50" }}
+{{ partial:layout/inner class="!my-0 py-30 lg:py-50" has_reveal="true" }}
   {{ if title }}
     <h2>{{ title}}</h2>
   {{ /if }}
