--- a/resources/views/partials/layout/head.antlers.html
+++ b/resources/views/partials/layout/head.antlers.html
@@ -29,7 +29,7 @@
 {{ vite src="resources/css/app.css" }}
 {{ livewire:styles }}
 </head>
-{{# {{ partial:layout/debug }} #}}
+{{ partial:layout/debug }}
 <noscript>
   <style>
     [data-reveal="fade-in"] { visibility: visible; opacity: 100; }
