--- a/resources/views/partials/components/misc/intro.antlers.html
+++ b/resources/views/partials/components/misc/intro.antlers.html
@@ -5,11 +5,11 @@
   <div class="md:w-[60%] overflow-hidden">
     {{ title }}
       <div class="flex items-center w-full leading-none">
-        <div class="flex flex-col justify-between shrink-0 w-[30%] md:w-[55%] lg:w-[50%] xl:w-[55%] 2xl:w-[65%] mr-10 lg:mr-20">
-          <div class="w-full h-8 lg:h-11 mb-8 lg:mb-10 intro-line"></div>
-          <div class="w-full h-8 lg:h-11 intro-line"></div>
+        <div class="flex flex-col justify-between shrink-0 {{ is_short ? 'w-[30%] md:w-[55%] lg:w-[50%] xl:w-[55%] 2xl:w-[65%]' : 'w-[30%] md:w-[40%] lg:w-[35%] xl:w-[50%] 2xl:w-[55%]' }} mr-10 lg:mr-20 transition-all">
+          <div class="w-full h-10 lg:h-15 mb-10 lg:mb-15 intro-line"></div>
+          <div class="w-full h-10 lg:h-15 intro-line"></div>
         </div>
-        <div class="text-3xl lg:text-4xl font-bold uppercase whitespace-nowrap md:w-[40%] mt-2 intro-title">
+        <div class="text-title-lg lg:text-title-xl font-bold uppercase whitespace-nowrap md:w-[40%] mt-2 intro-title">
           {{ title_line }}
         </div>
       </div>
