--- a/resources/css/forms.css
+++ b/resources/css/forms.css
@@ -30,20 +30,29 @@ textarea {
   @apply underline underline-offset-4 decoration-1
 }
 
-.checkboxes input[type=checkbox] {
-  @apply appearance-none w-20 h-20 ring-0 focus:ring-0 !ring-offset-0 !rounded-none !outline-none border border-lemon text-steel bg-white !accent-lemon
+.checkboxes input[type=checkbox],
+.checkboxes input[type=radio] {
+  @apply appearance-none w-20 h-20 ring-0 focus:ring-0 !ring-offset-0 rounded-none !outline-none border border-lemon text-steel bg-white !accent-lemon
 }
 
-.checkboxes.has-error input[type=checkbox] {
+.checkboxes input[type=radio] {
+  @apply rounded-full
+}
+
+.checkboxes.has-error input[type=checkbox],
+.checkboxes.has-error input[type=radio] {
   @apply border-red-600
 }
 
 .checkboxes input[type=checkbox]:checked {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23DEDF15' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 14px;
+  @apply bg-center bg-no-repeat bg-[length:14px_auto]
 }
+
+.checkboxes input[type=radio]:checked {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48' fill='%23DEDF15' stroke='none' stroke-width='6' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='24' cy='24' r='20'/%3E%3C/svg%3E");
+  @apply bg-center bg-no-repeat bg-[length:14px_auto]
+} 
 
 .has-error input[type=text],
 .has-error input[type=email],
