--- a/resources/views/partials/components/misc/shortcut_menu.antlers.html
+++ b/resources/views/partials/components/misc/shortcut_menu.antlers.html
@@ -1,5 +1,5 @@
 <a 
-  href="/dienstleistungen/gastronomie"
+  href="{{ menue:file }}"
   title="Gastronomie"
   class="flex flex-col group absolute -bottom-65 sm:-bottom-75 lg:-bottom-95 right-10 lg:right-35 {{ class }}">
   {{ partial:icons/menu class="block w-40 lg:w-60 h-auto group-hover:text-lemon transition-all" }}
