--- a/resources/views/partials/components/misc/jobs.antlers.html
+++ b/resources/views/partials/components/misc/jobs.antlers.html
@@ -47,7 +47,7 @@
                 <div class="sm:col-span-full mt-15 lg:mt-30">
                   {{ partial:partials/components/buttons/primary 
                       type="outline" 
-                      button_text="Stellenbeschreibung (PDF)" 
+                      button_text="Stelleninserat (PDF)" 
                       :button_link="file:url"
                       target="_blank"
                       class="px-15 lg:px-20" }}
