--- a/resources/views/partials/components/editor.antlers.html
+++ b/resources/views/partials/components/editor.antlers.html
@@ -1,5 +1,7 @@
 {{ if type == 'button' }}
   {{ partial:components/buttons/primary type="outline" }}
+{{ elseif type == 'button_menue' && menue:file }}
+  {{ partial:components/buttons/primary type="outline" target="_blank" button_link="{{ menue:file }}" }}
 {{ elseif type == 'contact_box' }}
   {{ partial:components/misc/contact-box class="max-w-sm" }}
 {{ else }}
